--- a/package.json
+++ b/package.json
@@ -11,16 +11,43 @@
     "sitemap",
     "sitemap.xml"
   ],
-  "author": "Ben Delarre <ben@delarre.net> (http://www.delarre.net)",
+  "author": {
+    "name": "Ben Delarre",
+    "email": "ben@delarre.net",
+    "url": "http://www.delarre.net"
+  },
   "maintainers": [
-    "Ben Delarre <ben@delarre.net> (http://www.delarre.net)",
-    "Benjamin Lupton <b@lupton.cc> (https://github.com/balupton)"
+    {
+      "name": "Ben Delarre",
+      "email": "ben@delarre.net",
+      "url": "http://www.delarre.net"
+    },
+    {
+      "name": "Benjamin Lupton",
+      "email": "b@lupton.cc",
+      "url": "https://github.com/balupton"
+    }
   ],
   "contributors": [
-    "Khalid Jebbari <khalid.jebbari@gmail.com> (https://github.com/DjebbZ)",
-    "Ben Delarre <ben@delarre.net> (https://github.com/benjamind)",
-    "Benjamin Lupton <b@lupton.cc> (https://github.com/balupton)",
-    "Bruno Heridet (https://github.com/Delapouite)"
+    {
+      "name": "Khalid Jebbari",
+      "email": "khalid.jebbari@gmail.com",
+      "url": "https://github.com/DjebbZ"
+    },
+    {
+      "name": "Ben Delarre",
+      "email": "ben@delarre.net",
+      "url": "https://github.com/benjamind"
+    },
+    {
+      "name": "Benjamin Lupton",
+      "email": "b@lupton.cc",
+      "url": "https://github.com/balupton"
+    },
+    {
+      "name": "Bruno Heridet",
+      "url": "https://github.com/Delapouite"
+    }
   ],
   "bugs": {
     "url": "https://github.com/docpad/docpad-plugin-sitemap/issues"
@@ -46,5 +73,13 @@
   "main": "./out/sitemap.plugin.js",
   "scripts": {
     "test": "node ./out/sitemap.test.js"
-  }
+  },
+  "readme": "# Sitemap Plugin for [DocPad](http://docpad.org)\n\n[![Build Status](https://secure.travis-ci.org/docpad/docpad-plugin-sitemap.png?branch=master)](http://travis-ci.org/docpad/docpad-plugin-sitemap \"Check this project's build status on TravisCI\")\n[![NPM version](https://badge.fury.io/js/docpad-plugin-sitemap.png)](https://npmjs.org/package/docpad-plugin-sitemap \"View this project on NPM\")\n\nThis DocPad plugin will automatically generate a valid `sitemap.xml` file for search engines. It's merely a wrapper for the [sitemap.js](https://github.com/ekalinin/sitemap.js) library.\n\nThis project was forked from the solid start made by [Khalid Jebbari](https://github.com/DjebbZ/docpad-plugin-sitemap).\n\nTo learn more about sitemap.xml files, read [the protocol](http://www.sitemaps.org/).\n\n\n## Installation\n\n``` bash\ndocpad install sitemap\n```\n\n\n## Usage\nFor each document, you can specify the following metadata :\n\n``` coffee\nchangfreq: 'always' || 'hourly' || 'daily' || 'weekly' || 'monthly' || 'yearly' || 'never' # Change frequency, defaults to 'weekly'\npriority: 0.5 # value between 0.0 and 1.0, defaults to 0.5\nsitemap: true || false # defaults to true, if false no entry for this document will be generated\n```\n\nFor the whole site you can set defaults using the plugin configuration in your docpad.cson or docpad.coffee file.\n\n``` coffee\n\tplugins:\n\t\tsitemap:\n\t\t\tcachetime: 600000\n\t\t\tchangefreq: 'weekly'\n\t\t\tpriority: 0.5\n```\n\nSite URL is read from the `templateData.site.url` property also in that same config file, but will fallback to the `hostname` property in the plugin config if not found.\n\n\n## License\nLicensed under the incredibly [permissive](http://en.wikipedia.org/wiki/Permissive_free_software_licence) [MIT License](http://creativecommons.org/licenses/MIT/)\n<br/>Copyright &copy; 2012+ [Ben Delarre](http://delarre.net)\n",
+  "readmeFilename": "README.md",
+  "_id": "docpad-plugin-sitemap@2.0.1",
+  "dist": {
+    "shasum": "3f254f718b0aa281f65cc0ec481e4e8dc6a7cdc5"
+  },
+  "_from": "docpad-plugin-sitemap@2",
+  "_resolved": "https://registry.npmjs.org/docpad-plugin-sitemap/-/docpad-plugin-sitemap-2.0.1.tgz"
 }
